src/test/ui/borrowck/two-phase-cannot-nest-mut-self-calls.stderr
error[E0502]: cannot borrow `vec` as mutable because it is also borrowed as immutable
  --> $DIR/two-phase-cannot-nest-mut-self-calls.rs:16:9
   |
LL |       vec.get({
   |       -   --- immutable borrow later used by call
   |  _____|
   | |
LL | |
LL | |         vec.push(2);
   | |         ^^^^^^^^^^^ mutable borrow occurs here
LL | |
LL | |
LL | |         0
LL | |     });
   | |______- immutable borrow occurs here
   |
help: try adding a local storing this argument...
  --> $DIR/two-phase-cannot-nest-mut-self-calls.rs:16:9
   |
LL |         vec.push(2);
   |         ^^^^^^^^^^^
help: ...and then using that local as the argument to this call
  --> $DIR/two-phase-cannot-nest-mut-self-calls.rs:14:5
   |
LL | /     vec.get({
LL | |
LL | |         vec.push(2);
LL | |
LL | |
LL | |         0
LL | |     });
   | |______^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
